Update Strings
Signed-off-by: Samflyn <akhil.sai701@gmail.com>